Fix docker-compose paths and add CI-specific compose file
- Fix service build paths: ./whatsapp/services/* -> ./services/*
- Add docker-compose.ci.yml with minimal services for CI testing
- Update GitHub workflow to use CI compose file
- CI compose includes only: postgres, redis, kafka, and 4 WhatsApp services

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -29,7 +29,7 @@ jobs:
 
       - name: Start services
         run: |
-          docker compose up -d
+          docker compose -f docker-compose.ci.yml up -d --build
           echo "Waiting for services to start..."
 
       - name: Wait for services to be healthy
@@ -110,13 +110,13 @@ jobs:
         if: failure()
         run: |
           echo "=== Docker Compose Logs ==="
-          docker compose logs --tail=100
+          docker compose -f docker-compose.ci.yml logs --tail=100
 
           echo ""
           echo "=== Container Status ==="
-          docker compose ps
+          docker compose -f docker-compose.ci.yml ps
 
       - name: Cleanup
         if: always()
         run: |
-          docker compose down -v
+          docker compose -f docker-compose.ci.yml down -v
